@@ -1,5 +1,6 @@
 package org.lazywizard.lazylib;
 
+import com.fs.starfarer.api.Global;
 import com.fs.starfarer.api.campaign.SectorEntityToken;
 import com.fs.starfarer.api.combat.BattleObjectiveAPI;
 import com.fs.starfarer.api.combat.CombatEntityAPI;
@@ -10,6 +11,7 @@ import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import org.apache.log4j.Level;
 import org.lwjgl.util.vector.Vector2f;
 
 /**
@@ -185,6 +187,10 @@ public class CollectionUtils
     @Deprecated
     public static <T> List<T> weightedRandom(Map<T, Float> pickFrom, int numToPick)
     {
+        Global.getLogger(CollectionUtils.class).log(Level.WARN,
+                "Using deprecated method weightedRandom(Map<T, Float> pickFrom,"
+                + " int numToPick)");
+
         if (pickFrom.isEmpty() || numToPick <= 0)
         {
             return Collections.EMPTY_LIST;
@@ -225,6 +231,9 @@ public class CollectionUtils
     @Deprecated
     public static <T> T weightedRandom(Map<T, Float> pickFrom)
     {
+        Global.getLogger(CollectionUtils.class).log(Level.WARN,
+                "Using deprecated method weightedRandom(Map<T, Float> pickFrom)");
+
         if (pickFrom.isEmpty())
         {
             return null;
@@ -262,6 +271,8 @@ public class CollectionUtils
 
         private SortObjectivesByDistance()
         {
+            Global.getLogger(CollectionUtils.class).log(Level.WARN,
+                    "Using deprecated class SortObjectivesByDistance");
         }
 
         /**
