@@ -11,6 +11,7 @@ import java.awt.geom.Line2D;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import org.apache.log4j.Level;
 import org.lazywizard.lazylib.CollectionUtils;
 import org.lazywizard.lazylib.MathUtils;
 import org.lwjgl.util.vector.Vector2f;
@@ -299,7 +300,7 @@ public class WeaponUtils
         }
     }
 
-        /**
+    /**
      * Calculates the damage done by a weapon after MutableShipStats are applied.
      *
      * @param baseDamage The base damage of this weapon.
@@ -312,6 +313,10 @@ public class WeaponUtils
     @Deprecated
     public static float calculateActualDamage(float baseDamage, WeaponAPI weapon)
     {
+        Global.getLogger(WeaponUtils.class).log(Level.WARN,
+                "Using deprecated method calculateActualDamage(float baseDamage,"
+                + " WeaponAPI weapon)");
+
         if (weapon.getShip() == null)
         {
             return baseDamage;
@@ -357,6 +362,10 @@ public class WeaponUtils
     public static float calculateActualDamage(float baseDamage, WeaponAPI weapon,
             ShipAPI target, DefenseType defense)
     {
+        Global.getLogger(WeaponUtils.class).log(Level.WARN,
+                "Using deprecated method calculateActualDamage(float baseDamage,"
+                + " WeaponAPI weapon, ShipAPI target, DefenseType defense)");
+
         MutableShipStatsAPI stats = target.getMutableStats();
         MutableShipStatsAPI shooter = (weapon.getShip() == null ? null
                 : weapon.getShip().getMutableStats());
